# graphql-normalize

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: cd.yml
graphql-normalize-lib/: Cargo.toml  README.md
graphql-normalize-lib/src/: lib.rs
src/: main.rs
